--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -17,11 +18,14 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^2.2.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "styled-components": "^5.3.0",
-    "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -52,6 +56,8 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5"
   }
 }
