--- a/package.json
+++ b/package.json
@@ -1,63 +1,65 @@
 {
-  "name": "new-app",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.10",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.6.0",
-    "dotenv": "^10.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "react-content-loader": "^6.0.3",
-    "react-dom": "^17.0.2",
-    "react-loading-skeleton": "^2.2.0",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "build": "tsc",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.1.8",
-    "@types/styled-components": "^5.1.11",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "ts-node": "^10.2.0",
-    "typescript": "^4.3.5"
-  }
+    "name": "new-app",
+    "version": "0.1.0",
+    "private": true,
+    "type": "module",
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
+        "@types/jest": "^26.0.24",
+        "@types/node": "^16.4.10",
+        "@types/react": "^17.0.15",
+        "@types/react-dom": "^17.0.9",
+        "axios": "^0.21.1",
+        "body-parser": "^1.19.0",
+        "bootstrap": "^4.6.0",
+        "dotenv": "^10.0.0",
+        "jsonwebtoken": "^8.5.1",
+        "react": "^17.0.2",
+        "react-bootstrap": "^1.6.1",
+        "react-content-loader": "^6.0.3",
+        "react-dom": "^17.0.2",
+        "react-loading-skeleton": "^2.2.0",
+        "react-redux": "^7.2.4",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.3",
+        "redux": "^4.1.1",
+        "styled-components": "^5.3.0",
+        "web-vitals": "^1.1.2"
+    },
+    "scripts": {
+        "json_server": "npx json-server --watch db.json --port 3000",
+        "site": "set PORT=3001 && react-scripts start",
+        "build": "react-scripts build",
+        "start": "concurrently \"npm run json_server\" \"npm run site\"",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/react-router-dom": "^5.1.8",
+        "@types/styled-components": "^5.1.11",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "ts-node": "^10.2.0",
+        "typescript": "^4.3.5"
+    }
 }
