--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.21.1",
         "body-parser": "^1.19.0",
         "bootstrap": "^4.6.0",
+        "concurrently": "^7.0.0",
         "dotenv": "^10.0.0",
         "jsonwebtoken": "^8.5.1",
         "react": "^17.0.2",
